--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
     "vue-cookies": "^1.8.3",
+    "vue-google-signin-button": "^1.0.4",
     "vue-router": "^3.5.1",
     "vuetify": "^2.6.0"
   },
