--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.3.4",
     "cookies": "^0.8.0",
     "core-js": "^3.8.3",
+    "pip": "^0.0.1",
     "vue": "^2.6.14",
     "vue-cookies": "^1.8.3",
     "vue-google-signin-button": "^1.0.4",
